@@ -53,7 +53,6 @@
         <version>${surefire.version}</version>
         <configuration>
           <argLine>
-            -XX:-UseCompactObjectHeaders
             -Djdk.attach.allowAttachSelf=true
           </argLine>
         </configuration>
